deployments/fake_service/service-a.yaml
# Service to expose service-a
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  # type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
# service-a
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
      annotations: 
        "consul.hashicorp.com/connect-inject": "true"
#        "consul.hashicorp.com/transparent-proxy": "false"
#        "consul.hashicorp.com/connect-service-upstreams": "service-c:9091"
#        "consul.hashicorp.com/connect-service-upstreams": "service-b-v1:9091"
         #For the upstream line, this points to the #"<servicename>.<consul-namespace>.<partitionname>:<port#>" of the upstream service.
         #If its in the same partition and namespace, it can be omitted, ex:
#        "consul.hashicorp.com/connect-service-upstreams": "service-c:9091"
    spec:
      serviceAccountName: service-a
      containers:
      - name: service-a
        image: nicholasjackson/fake-service:v0.26.2
        ports:
        - containerPort: 9090
