deployments/fake_service/service-b-v1.yaml
# Service to expose service-b-v1
apiVersion: v1
kind: Service
metadata:
  name: service-b-v1
spec:
  selector:
    app: service-b-v1
  # type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
# service-b-v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  labels:
    app: service-b-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b-v1
  template:
    metadata:
      labels:
        app: service-b-v1
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
    spec:
      serviceAccountName: service-b-v1
      containers:
      - name: service-b-v1
        image: nicholasjackson/fake-service:v0.26.2
        ports:
        - containerPort: 9090
