deployments/fake_service/service-b-v2.yaml
# Service to expose service-b-v2
apiVersion: v1
kind: Service
metadata:
  name: service-b-v2
spec:
  selector:
    app: service-b-v2
  # type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
# service-b-v2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v2
  labels:
    app: service-b-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b-v2
  template:
    metadata:
      labels:
        app: service-b-v2
      annotations:
        consul.hashicorp.com/service-meta-version: "2"
        consul.hashicorp.com/service-tags: "v2"
    spec:
      serviceAccountName: service-b-v2
      containers:
      - name: service-b-v2
        image: nicholasjackson/fake-service:v0.25.1
        ports:
        - containerPort: 9090
