deployments/fake_service/service-c-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-c-v1
  namespace: default
  labels:
    app: metrics
spec:
  selector:
    app: service-c-v1
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: metrics # prom scraping port
      protocol: TCP
      port: 20200
      targetPort: 20200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-v1-deployment
  namespace: default
  labels:
    app: service-c-v1_v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c-v1
  template:
    metadata:
      labels:
        app: service-c-v1
        metrics: enabled
      annotations:
        consul.hashicorp.com/service-meta-version: "1"
        consul.hashicorp.com/service-tags: "v1"
    spec:
      serviceAccountName: service-c-v1
      automountServiceAccountToken: true
      containers:
        - name: service-c-v1
          image: nicholasjackson/fake-service:v0.26.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /ready
              port: 9090
            periodSeconds: 5
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
            periodSeconds: 5
            initialDelaySeconds: 5
