deployments/fake_service/test.yaml
# Service to expose test-service
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test-service
  # type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
# test-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
  labels:
    app: test-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
      annotations: 
        "consul.hashicorp.com/connect-inject": "true"
#        "consul.hashicorp.com/transparent-proxy": "false"
#        "consul.hashicorp.com/connect-service-upstreams": "service-c:9091"
#        "consul.hashicorp.com/connect-service-upstreams": "service-b-v1:9091"
         #For the upstream line, this points to the #"<servicename>.<consul-namespace>.<partitionname>:<port#>" of the upstream service.
         #If its in the same partition and namespace, it can be omitted, ex:
#        "consul.hashicorp.com/connect-service-upstreams": "service-c:9091"
    spec:
      serviceAccountName: test-service
      containers:
      - name: test-service
        image: nicholasjackson/fake-service:v0.26.2
        ports:
        - containerPort: 9090
