deployments/fake_service/routes-fake-service.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: http-route-fake-service
  namespace: default
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: fake-service-gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: service-a
      namespace: default
      port: 80
